# RMO-gross-pitaevskii

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Multiresolution.R  README.md  README.md.old  assemble.h  assembly.h  bench.cc  bench2.cc  checkgradient.R  checkgradient.cc  coarse.h  descent.h  discrete.h  dofs.h  energy.h  fe_interpolate.h  fe_space.h  fe_space_mg.h  function.h  gpe.cc  gpe.h  gpe_solve.h  grid.h  grid_operators.h  lac.h  main.cc  main.h  main_bench.cc  main_coarse.cc  main_coarse.h  main_mg.cc  main_mg.h  main_sparsity.cc  manifold.h  mesh.h  operators.h  (+18 more)
.github/workflows/: cmake-single-platform.yml
R/: multilevel_1.R  multilevel_2.R  multilevel_3.R  multilevel_4.R  multilevel_4_lattice.R  plot_ml.R  plot_ml_lattice.R
data/: ml_frob_diff_b100.org  ml_frob_diff_b1000.org  ml_frob_diff_b10000.org  ml_frob_diff_b10000_depth3.org  ml_frob_diff_b1000_depth3.org  ml_frob_diff_b100_depth3.org  ml_frob_proj_b100.org  ml_frob_proj_b1000.org  ml_frob_proj_b10000.org  ml_frob_proj_b10000_depth3.org  ml_frob_proj_b1000_depth3.org  ml_frob_proj_b100_depth3.org  ml_mass_adj1_b100.org  ml_mass_adj1_b1000.org  ml_mass_adj1_b10000.org  ml_mass_adj1_b10000_depth3.org  ml_mass_adj1_b1000_depth3.org  ml_mass_adj1_b100_depth3.org  ml_mass_adj2_b100.org  ml_mass_adj2_b1000.org  ml_mass_adj2_b10000.org  ml_mass_adj2_b10000_depth3.org  ml_mass_adj2_b1000_depth3.org  ml_mass_adj2_b100_depth3.org  ml_mass_diff_b100.org  ml_mass_diff_b1000.org  ml_mass_diff_b10000.org  ml_mass_diff_b10000_depth3.org  ml_mass_diff_b1000_depth3.org  ml_mass_diff_b100_depth3.org  ml_mass_diff_gal_b100.org  ml_mass_diff_gal_b1000.org  ml_mass_diff_gal_b10000.org  ml_mass_diff_gal_b10000_depth3.org  ml_mass_diff_gal_b1000_depth3.org  ml_mass_diff_gal_b100_depth3.org  ml_mass_proj_b100.org  ml_mass_proj_b1000.org  ml_mass_proj_b10000.org  ml_mass_proj_b10000_depth3.org  (+21 more)
data/org/: ml_frob_diff_b10000_l10_depth2.org  ml_frob_diff_b1000_l10_depth3.org  ml_frob_proj_b10000_l10_depth3.org  ml_frob_proj_b1000_l10_depth2.org  ml_frob_proj_b100_l10_depth2.org  ml_mass_adj1_b10000_l10_depth3.org  ml_mass_adj1_b1000_l10_depth3.org  ml_mass_adj1_b100_l10_depth3.org  ml_mass_adj2_b100_l10_depth3.org  ml_mass_diff_b1000_l10_depth3.org  ml_mass_diff_b100_l10_depth2.org  ml_mass_proj_b10000_l10_depth2.org  ml_mass_proj_gal_b100_l10_depth3.org
data/org/l10/: ml_frob_diff_b10000_l10_depth3.org  ml_frob_diff_b1000_l10_depth2.org  ml_frob_diff_b100_l10_depth2.org  ml_frob_diff_b100_l10_depth3.org  ml_frob_proj_b10000_l10_depth2.org  ml_frob_proj_b1000_l10_depth3.org  ml_frob_proj_b100_l10_depth3.org  ml_mass_adj1_b10000_l10_depth2.org  ml_mass_adj1_b1000_l10_depth2.org  ml_mass_adj1_b100_l10_depth2.org  ml_mass_adj2_b10000_l10_depth2.org  ml_mass_adj2_b10000_l10_depth3.org  ml_mass_adj2_b1000_l10_depth2.org  ml_mass_adj2_b1000_l10_depth3.org  ml_mass_adj2_b100_l10_depth2.org  ml_mass_diff_b10000_l10_depth2.org  ml_mass_diff_b10000_l10_depth3.org  ml_mass_diff_b1000_l10_depth2.org  ml_mass_diff_b100_l10_depth3.org  ml_mass_diff_gal_b10000_l10_depth2.org  ml_mass_diff_gal_b10000_l10_depth3.org  ml_mass_diff_gal_b1000_l10_depth2.org  ml_mass_diff_gal_b1000_l10_depth3.org  ml_mass_diff_gal_b100_l10_depth2.org  ml_mass_diff_gal_b100_l10_depth3.org  ml_mass_proj_b10000_l10_depth3.org  ml_mass_proj_b1000_l10_depth2.org  ml_mass_proj_b1000_l10_depth3.org  ml_mass_proj_b100_l10_depth2.org  ml_mass_proj_b100_l10_depth3.org  ml_mass_proj_gal_b10000_l10_depth2.org  ml_mass_proj_gal_b1000_l10_depth2.org  ml_mass_proj_gal_b1000_l10_depth3.org  ml_mass_proj_gal_b100_l10_depth2.org  sl_b10000_l10.org  sl_b1000_l10.org  sl_b100_l10.org
data/org/l11/: ml_frob_diff_b10000_l11_depth2.org  ml_frob_diff_b10000_l11_depth2_mix.org  ml_frob_diff_b10000_l11_depth3.org  ml_frob_diff_b10000_l11_depth3_mix.org  ml_frob_diff_b10000_l11_depth4.org  ml_frob_diff_b10000_l11_depth5.org  ml_frob_diff_b10000_l11_depth6.org  ml_frob_diff_b1000_l11_depth2.org  ml_frob_diff_b1000_l11_depth2_mix.org  ml_frob_diff_b1000_l11_depth3.org  ml_frob_diff_b1000_l11_depth3_mix.org  ml_frob_diff_b1000_l11_depth4.org  ml_frob_diff_b1000_l11_depth5.org  ml_frob_diff_b1000_l11_depth6.org  ml_frob_diff_b100_l11_depth2.org  ml_frob_diff_b100_l11_depth2_mix.org  ml_frob_diff_b100_l11_depth3.org  ml_frob_diff_b100_l11_depth3_mix.org  ml_frob_diff_b100_l11_depth4.org  ml_frob_diff_b100_l11_depth5.org  ml_frob_diff_b100_l11_depth6.org  ml_frob_proj_b10000_l11_depth2.org  ml_frob_proj_b10000_l11_depth2_mix.org  ml_frob_proj_b10000_l11_depth3.org  ml_frob_proj_b10000_l11_depth3_mix.org  ml_frob_proj_b10000_l11_depth4.org  ml_frob_proj_b10000_l11_depth5.org  ml_frob_proj_b10000_l11_depth6.org  ml_frob_proj_b1000_l11_depth2.org  ml_frob_proj_b1000_l11_depth2_mix.org  ml_frob_proj_b1000_l11_depth3.org  ml_frob_proj_b1000_l11_depth3_mix.org  ml_frob_proj_b1000_l11_depth4.org  ml_frob_proj_b1000_l11_depth5.org  ml_frob_proj_b1000_l11_depth6.org  ml_frob_proj_b100_l11_depth2.org  ml_frob_proj_b100_l11_depth2_mix.org  ml_frob_proj_b100_l11_depth3.org  ml_frob_proj_b100_l11_depth3_mix.org  ml_frob_proj_b100_l11_depth4.org  (+131 more)
data/org/l11_optical_lattice/: ml_mass_adj1_b1000_l11_depth2_optical_lattice.org  ml_mass_adj1_b1000_l11_depth3_optical_lattice.org  ml_mass_adj1_b1000_l11_depth4_optical_lattice.org  ml_mass_adj1_b1000_l11_depth5_optical_lattice.org  ml_mass_adj1_b1000_l11_depth6_optical_lattice.org  ml_mass_adj2_b1000_l11_depth2_optical_lattice.org  ml_mass_adj2_b1000_l11_depth3_optical_lattice.org  ml_mass_adj2_b1000_l11_depth4_optical_lattice.org  ml_mass_adj2_b1000_l11_depth5_optical_lattice.org  ml_mass_adj2_b1000_l11_depth6_optical_lattice.org  ml_mass_diff_b1000_l11_depth2_optical_lattice.org  ml_mass_diff_b1000_l11_depth3_optical_lattice.org  sl_b10000_l11_optical_lattice.org  (+20 more)
examples/: step-2.cc
include/: test_gradient.h
include/gpe/: lac.h  option.h  option_types.h
legacy/: README.md  mesh.h  mgtools.h  workstream.h
src/: main.cc  main_bench.cc  main_coarse.cc  main_sparsity.cc  test_descent.cc  test_gradient.cc  test_matrix_free.cc
(+24 files in other folders)
